# objective

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  index.html  objective.cabal  params.json
.github/workflows/: haskell.yml
proofs/: composition.md
src/Control/: Object.hs
src/Control/Monad/: Objective.hs
src/Control/Monad/Objective/: Class.hs  IO.hs  ST.hs
src/Control/Object/: Extensible.hs  Extra.hs  Instance.hs  Mortal.hs  Object.hs  Process.hs  Stream.hs  Suited.hs
src/Data/Functor/: PushPull.hs  Request.hs
