name:                objective
version:             1.0.1
synopsis:            Extensible objects
description:         Stateful effect transducer
homepage:            https://github.com/fumieval/objective
bug-reports:         http://github.com/fumieval/objective/issues
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (c) 2014 Fumiaki Kinoshita
category:            Control
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  .travis.yml
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/fumieval/objective.git

library
  exposed-modules:
    Control.Object
      , Control.Object.Object
      , Control.Object.Instance
      , Control.Object.Mortal
      , Data.Functor.Request
  other-extensions:    MultiParamTypeClasses, KindSignatures, TypeFamilies
  build-depends:       base >=4.6 && <5
    , either >= 4.3 && <4.5
    , containers >= 0.5.0.0 && <0.6
    , unordered-containers >= 0.2.0.0 && <0.3
    , transformers >= 0.3
    , free
    , hashable
    , profunctors
    , void
    , witherable
    , stm
  ghc-options: -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
