cabal-version:       2.4
name:                objective
version:             1.3
synopsis:            Composable objects
description:         Composable objects
homepage:            https://github.com/fumieval/objective
bug-reports:         http://github.com/fumieval/objective/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (c) 2014-2021 Fumiaki Kinoshita
category:            Control
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/fumieval/objective.git

library
  exposed-modules:
    Control.Object
      , Control.Object.Object
      , Control.Object.Instance
      , Control.Object.Mortal
  other-extensions:    MultiParamTypeClasses, KindSignatures, TypeFamilies
  build-depends:       base >=4.9 && <5
    , exceptions >= 0.8
    , transformers >= 0.3 && <0.6
    , witherable ^>= 0.4
    , monad-skeleton >= 0.1.1 && <0.3
  ghc-options: -Wall -Wcompat
  hs-source-dirs:      src
  default-language:    Haskell2010
